crates/snow-parser/tests/snapshots/parser_tests__parse_api_let_binding.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"let x = 42\")"
---
SOURCE_FILE@0..7
  LET_BINDING@0..7
    LET_KW@0..3 "let"
    NAME@3..4
      IDENT@3..4 "x"
    EQ@4..5 "="
    LITERAL@5..7
      INT_LITERAL@5..7 "42"
  EOF@7..7 ""
