crates/snow-parser/tests/snapshots/parser_tests__pattern_as_simple.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  Circle(r) as c -> c\\n  _ -> x\\nend\")"
---
SOURCE_FILE@0..32
  CASE_EXPR@0..32
    CASE_KW@0..4 "case"
    NAME_REF@4..5
      IDENT@4..5 "x"
    DO_KW@5..7 "do"
    NEWLINE@7..8 "\n"
    MATCH_ARM@8..23
      AS_PAT@8..20
        CONSTRUCTOR_PAT@8..17
          IDENT@8..14 "Circle"
          L_PAREN@14..15 "("
          IDENT_PAT@15..16
            IDENT@15..16 "r"
          R_PAREN@16..17 ")"
        IDENT@17..19 "as"
        IDENT_PAT@19..20
          IDENT@19..20 "c"
      ARROW@20..22 "->"
      NAME_REF@22..23
        IDENT@22..23 "c"
    NEWLINE@23..24 "\n"
    MATCH_ARM@24..28
      WILDCARD_PAT@24..25
        IDENT@24..25 "_"
      ARROW@25..27 "->"
      NAME_REF@27..28
        IDENT@27..28 "x"
    NEWLINE@28..29 "\n"
    END_KW@29..32 "end"
  EOF@32..32 ""
