crates/snow-parser/tests/snapshots/parser_tests__pattern_constructor_nested.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  Some(Circle(r)) -> r\\n  _ -> 0\\nend\")"
---
SOURCE_FILE@0..35
  CASE_EXPR@0..35
    CASE_KW@0..4 "case"
    NAME_REF@4..5
      IDENT@4..5 "x"
    DO_KW@5..7 "do"
    NEWLINE@7..8 "\n"
    MATCH_ARM@8..26
      CONSTRUCTOR_PAT@8..23
        IDENT@8..12 "Some"
        L_PAREN@12..13 "("
        CONSTRUCTOR_PAT@13..22
          IDENT@13..19 "Circle"
          L_PAREN@19..20 "("
          IDENT_PAT@20..21
            IDENT@20..21 "r"
          R_PAREN@21..22 ")"
        R_PAREN@22..23 ")"
      ARROW@23..25 "->"
      NAME_REF@25..26
        IDENT@25..26 "r"
    NEWLINE@26..27 "\n"
    MATCH_ARM@27..31
      WILDCARD_PAT@27..28
        IDENT@27..28 "_"
      ARROW@28..30 "->"
      LITERAL@30..31
        INT_LITERAL@30..31 "0"
    NEWLINE@31..32 "\n"
    END_KW@32..35 "end"
  EOF@35..35 ""
