crates/snow-parser/tests/snapshots/parser_tests__pattern_constructor_qualified_no_args.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  Shape.Point -> 1\\n  _ -> 0\\nend\")"
---
SOURCE_FILE@0..31
  CASE_EXPR@0..31
    CASE_KW@0..4 "case"
    NAME_REF@4..5
      IDENT@4..5 "x"
    DO_KW@5..7 "do"
    NEWLINE@7..8 "\n"
    MATCH_ARM@8..22
      CONSTRUCTOR_PAT@8..19
        IDENT@8..13 "Shape"
        DOT@13..14 "."
        IDENT@14..19 "Point"
      ARROW@19..21 "->"
      LITERAL@21..22
        INT_LITERAL@21..22 "1"
    NEWLINE@22..23 "\n"
    MATCH_ARM@23..27
      WILDCARD_PAT@23..24
        IDENT@23..24 "_"
      ARROW@24..26 "->"
      LITERAL@26..27
        INT_LITERAL@26..27 "0"
    NEWLINE@27..28 "\n"
    END_KW@28..31 "end"
  EOF@31..31 ""
