crates/snow-parser/tests/snapshots/parser_tests__pattern_constructor_unqualified.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  Some(v) -> v\\n  _ -> 0\\nend\")"
---
SOURCE_FILE@0..27
  CASE_EXPR@0..27
    CASE_KW@0..4 "case"
    NAME_REF@4..5
      IDENT@4..5 "x"
    DO_KW@5..7 "do"
    NEWLINE@7..8 "\n"
    MATCH_ARM@8..18
      CONSTRUCTOR_PAT@8..15
        IDENT@8..12 "Some"
        L_PAREN@12..13 "("
        IDENT_PAT@13..14
          IDENT@13..14 "v"
        R_PAREN@14..15 ")"
      ARROW@15..17 "->"
      NAME_REF@17..18
        IDENT@17..18 "v"
    NEWLINE@18..19 "\n"
    MATCH_ARM@19..23
      WILDCARD_PAT@19..20
        IDENT@19..20 "_"
      ARROW@20..22 "->"
      LITERAL@22..23
        INT_LITERAL@22..23 "0"
    NEWLINE@23..24 "\n"
    END_KW@24..27 "end"
  EOF@27..27 ""
