crates/snow-parser/tests/snapshots/parser_tests__pattern_or_simple.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  Circle(_) | Point -> 1\\n  _ -> 0\\nend\")"
---
SOURCE_FILE@0..35
  CASE_EXPR@0..35
    CASE_KW@0..4 "case"
    NAME_REF@4..5
      IDENT@4..5 "x"
    DO_KW@5..7 "do"
    NEWLINE@7..8 "\n"
    MATCH_ARM@8..26
      OR_PAT@8..23
        CONSTRUCTOR_PAT@8..17
          IDENT@8..14 "Circle"
          L_PAREN@14..15 "("
          WILDCARD_PAT@15..16
            IDENT@15..16 "_"
          R_PAREN@16..17 ")"
        BAR@17..18 "|"
        IDENT_PAT@18..23
          IDENT@18..23 "Point"
      ARROW@23..25 "->"
      LITERAL@25..26
        INT_LITERAL@25..26 "1"
    NEWLINE@26..27 "\n"
    MATCH_ARM@27..31
      WILDCARD_PAT@27..28
        IDENT@27..28 "_"
      ARROW@28..30 "->"
      LITERAL@30..31
        INT_LITERAL@30..31 "0"
    NEWLINE@31..32 "\n"
    END_KW@32..35 "end"
  EOF@35..35 ""
