crates/snow-parser/tests/snapshots/parser_tests__pipe_chain.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"x |> foo() |> bar()\")"
---
SOURCE_FILE@0..15
  PIPE_EXPR@0..15
    PIPE_EXPR@0..8
      NAME_REF@0..1
        IDENT@0..1 "x"
      PIPE@1..3 "|>"
      CALL_EXPR@3..8
        NAME_REF@3..6
          IDENT@3..6 "foo"
        ARG_LIST@6..8
          L_PAREN@6..7 "("
          R_PAREN@7..8 ")"
    PIPE@8..10 "|>"
    CALL_EXPR@10..15
      NAME_REF@10..13
        IDENT@10..13 "bar"
      ARG_LIST@13..15
        L_PAREN@13..14 "("
        R_PAREN@14..15 ")"
  EOF@15..15 ""
