crates/snow-parser/tests/snapshots/parser_tests__pipe_simple.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"x |> foo()\")"
---
SOURCE_FILE@0..8
  PIPE_EXPR@0..8
    NAME_REF@0..1
      IDENT@0..1 "x"
    PIPE@1..3 "|>"
    CALL_EXPR@3..8
      NAME_REF@3..6
        IDENT@3..6 "foo"
      ARG_LIST@6..8
        L_PAREN@6..7 "("
        R_PAREN@7..8 ")"
  EOF@8..8 ""
